versioned_docs/version-5.3.0/introduction.md
---
slug: /
sidebar_position: 1
---
import ThemedImage from '@theme/ThemedImage';
import PlatformArchitectureLight from './img/introduction/platform-architecture-light.png';
import PlatformArchitectureDark from './img/introduction/platform-architecture-dark.png';

# Introduction

Welcome to our official documentation page!

The Tributech Platform is a solution for a secure data integration, from any sources, that enhances data security without compromising interoperability. It’s used to secure data against tampering and hijacking, making it trustworthy for any connected product, device, or service. The Tributech platform is available as a SaaS or PaaS solution and offers integration options for IT systems, OT infrastructure and IoT gateways or devices. The following diagram provides an overview of the platform's architecture.

<ThemedImage
  alt="Tributech Platform Architecture - Overview"
  sources={{ light: PlatformArchitectureLight, dark: PlatformArchitectureDark }}
/>

The platform includes components like [Tributech Sources](tributech_agent/source_integration.md) and [Tributech Agents](tributech_agent/overview.md) which are used to collect the Customer Data and securely transmit it from an Edge Device to our [Tributech Node](tributech_node/overview.md). The [Tributech Node](tributech_node/overview.md) persist collected data reliable and ensure data integrity, authenticity throughout its lifecycle. Collected data can be
inspected at anytime and reviewed with our provided Tributech Web UI. We also provide the possibility to access our [Tributech Node](tributech_node/overview.md) data and functionality for authenticated Customer Application via [REST](tributech_node/api_category/API_usage.md) or get notified of predefined events via [Webhooks](tributech_node/Webhook_integration.md).


## Platform Features

The following list provides an overview of the most important platform features.

| Feature    | Description                                                                                   |
| --------- | ---------------------------------------------------------------------------------------------  |
| Data integrity protection      | Securing your data integrity by creating cryptographic proofs at that allow you to verify data integrity and authenticity between source and destination.  |
| Data tampering detection    | Detection of any poisoned / tampered data caused by cybersecurity incidents or system failures through automated data verification processes. The verification results and tamper alerts can be integrated into your SIEM/SOAR via API or via webhooks.         |
| Data integration | The platform provides a comprehensive set of data integration options ranging from IoT, OT to IT, enabling the secure data integration for any data source. In addition to the platform's open interfaces, industry protocols like e.g. MQTT, OPC-UA, ADS or UART are supported.     |
| Data middleware | The data middleware provides a powerful data processing engine that is able to stream data between source and destination in near real time. Furthermore, the middleware also includes a warm storage to persist historical data. A powerful master data management based on the DTDL standard provides a uniform description of each connected data source.        |
| Remote configuration  | Remote configurations allow you to manage and update the configuration parameters of any connected data source (e.g. sensor, machine, building, server, ...) via the platform dashboard or API.        |
| Remote commands | Remote commands allow you to perform actions (e.g. trigger, on/off, set value, ...) on any connected data source (e.g. sensor, machine, building, server, ...) via the platform dashboard or API in near real-time.        |

## Quick Links

- To learn how to integrate IT/OT/IoT data sources via the Tributech Agent, visit the [overview](./tributech_agent/overview.md) page or start directly with our [quick start guide](./tributech_agent/quickstart.mdx).
- Visit API [Usage](./tributech_node/api_category/API_usage.md)/[Integration](./tributech_node/api_category/API_integration.md) for more information on what our [Tributech Node](tributech_node/overview.md) REST interface provides for the most common use cases.
- Visit the [Webhooks](./tributech_node/Webhook_integration.md) to learn more about [Tributech Node](tributech_node/overview.md) Events

